styles/styles.css
body {
  padding:50px;
  font:19px/1.5 Times, serif;
  color:#69665b;
  font-weight:300;
}

h1, h2, h3, h4, h5, h6 {
  color:rgb(76, 73, 65);
  margin:0 0 20px;
}

p, ul, ol, table, pre, dl {
  margin:0 0 20px;
}

h1, h2, h3 {
  line-height:1.1;
}

h1 {
  font-size:1.5em;
  margin-bottom:7px;
}

h2 {
  margin-top: 2em;
}

h3, h4, h5, h6 {
  margin-top: 1.7em;
}

a {
  color:#39c;
  font-weight:400;
}

a small {
  font-size:11px;
  color:#777;
  margin-top:-0.6em;
  display:block;
}

.wrapper {
  width: 666px;
  margin:0 auto;
}

blockquote {
  border-left:1px solid #e5e5e5;
  margin:0;
  padding:0 0 0 20px;
  font-style:italic;
}

code {
  font-size:17px;
}

code, pre {
  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
  color:#333;
}

pre {
  padding:8px 15px;
  background: #f8f8f8;
  border-radius:5px;
  border:1px solid #e5e5e5;
  overflow-x: auto;
  font-size:13px;
}

table {
  width:100%;
  border-collapse:collapse;
}

th, td {
  text-align:left;
  padding:5px 10px;
  border-bottom:1px solid #e5e5e5;
}

dt {
  color:#444;
  font-weight:700;
}

th {
  color:#444;
}

img {
  max-width:100%;
}

header {
  position:relative;
}

strong {
  color:#222;
  font-weight:700;
}

header a.home {
  font-size:14px;
  display:block;
  color:#222;
  position: absolute;
  left: 0;
  top: -40px;
}

section {
  padding-bottom:50px;
}

small {
  font-size:11px;
}

hr {
  border:0;
  background:#e5e5e5;
  height:1px;
  margin:0 0 20px;
}

header p {
  font-size: 18px;
}



@media print, screen and (max-width: 960px) {}



header {
  padding-right:100px;
}


header a small {
  display:inline;
}

section {
  border:1px solid #F5F5F5;
  border-width:1px 0;
  padding:0;
  margin:0 0 20px;
}


@media print, screen and (max-width: 720px) {
  body {
    word-wrap:break-word;
  }

  header {
    padding:0;
  }

  header ul, header p.view {
    position:static;
  }

  pre, code {
    word-wrap:normal;
  }
}

@media print, screen and (max-width: 480px) {
  body {
    padding:15px;
  }

  header ul {
    display:none;
  }
}

@media print {
  body {
    padding:0.4in;
    font-size:12pt;
    color:#444;
  }
}

footer {
  font-size: 12px;
  color: #999;
}




/** Demo **/

.demo {
  font-family: Arial, sans-serif;
}

.demo-graph {
  position: relative;
  top: 10px;
  left: 0px;
  width: 100%;
  height: 350px;
  font-family: Arial, sans-serif;
  font-size: 14px;
}


path {
  stroke: #333;
  stroke-width: 2px;
  fill: none;
}
path.soil-background {
  stroke: #999;
  stroke-dasharray: 2 5;
}
rect.axis, rect.tick, rect.y-tick {
  stroke: none;
  fill: #89867b;
}
text.tick-label, text.y-tick-label {
  font-size: 10px;
  fill: #89867b;
}

